--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@
   color: #61dafb;
 }
 
+.shadow-box-example:hover {
+  background-color: #f3f3f3;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
